# liblxqt-mount-deprecated

./: .gitignore  AUTHORS  CMakeLists.txt  lxqtmount.cpp  lxqtmount.h  mount.cpp  mount.h  providers.cpp  providers.h  providers_udisks2.cpp  rzmountproviders.cpp  rzmountproviders.h  rzmountproviders_udisks2.cpp
cmake/: create_pkgconfig_file.cmake  lxqtmount-config.cmake.in  lxqtmount_use.cmake
